@@ -1,0 +1,29 @@
+require(RadOnc)
+?trace
+NULL
+rep(NULL,3)
+NULL[4]
+test <- function(x,a,b) {
+print(x)
+test2 <- function(c) {
+print(c)
+print(a)
+print(b)
+}
+test2(a)
+test2(a+5)
+}
+test("huh?",1,999)
+test <- function(x,a,b) {#
+print(x)#
+test2 <- function(c) {#
+print(c)#
+print(a)#
+test3(modality=b)#
+}#
+test2(a)#
+test2(a+5)#
+}
+test3 <- function(modality) {print(modality*3)}
+test("huh?",1,999)
+quit()
